# RecursiveZK-Winterfell

./: .gitignore  .gitmodules  Cargo.toml  README.MD  package-lock.json  package.json
1_Prover/: build.rs
1_Prover/src/: circom.rs  lib.rs
circuits/: fri.circom  merkle.circom  ood_consistency_check.circom  public_coin.circom  verify.circom
circuits/air/: sum.circom
circuits/poseidon/: generate_parameters_grain.sage.py  param.circom  poseidon.circom
circuits/utils/: arithmetic.circom  arrays.circom  assertions.circom  bits.circom  comparators.circom  duplicates.circom  polynoms.circom  powers.circom
examples/example-sum/: Cargo.toml
examples/example-sum/src/: create.rs  main.rs
tools/: build-circuit.js  circuit-constraints.js  generate-input.js  testtool.js
tools/helpers/: actions.js  gen-inputs-utils.js
